--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,8 +1,12 @@
 <!--
   The Side Bar
 -->
-
-<div id="sidebar" class="d-flex flex-column align-items-end">
+<style>
+  #sidebar{
+    background: black;
+  }
+</style>
+<div id="sidebar" class="d-flex flex-column align-items-end" >
 
   <div class="profile-wrapper text-center">
     <div id="avatar">
