--- a/_sass/colors/light-typography.scss
+++ b/_sass/colors/light-typography.scss
@@ -44,7 +44,7 @@
   --btn-patinator-text-color: #555555;
   --btn-paginator-hover-color: #e9ecef;
   --btn-active-bg: #2a408e;
-  --btn-active-border-color: #007bff;
+  --btn-active-border-color: black;
   --btn-text-color: #f8f8f8;
   --btn-paginator-border-color: #f1f1f1;
   --btn-paginator-shadow: #4b92d2;
