--- a/_includes/css-selector.html
+++ b/_includes/css-selector.html
@@ -3,6 +3,12 @@
 -->
 
 <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}">
+<style>
+  #sidebar{
+    background-image : url("/images/main1.jpg");
+    background-position : center;
+  }
+</style>
 
 {% if site.toc and page.toc %}
   <link rel="stylesheet"
