--- a/_includes/css-selector.html
+++ b/_includes/css-selector.html
@@ -8,6 +8,15 @@
     background-image : url("/images/main1.jpg");
     background-position : center;
   }
+  #sidebar .nav-item.active .nav-link {
+    color: #fcfcfc;
+    font-size: 20px;
+  }
+  #sidebar a {
+    color: #dbdadaf6;
+    transition: color 0.35s ease-in-out;
+    user-select: none;
+}
 </style>
 
 {% if site.toc and page.toc %}
