--- a/_includes/css-selector.html
+++ b/_includes/css-selector.html
@@ -7,6 +7,8 @@
   #sidebar{
     background-image : url("/images/main1.jpg");
     background-position : center;
+    background-repeat : false;
+    background-size: cover;
   }
   #sidebar .nav-item.active .nav-link {
     color: #fcfcfc;
