--- a/_sass/colors/light-typography.scss
+++ b/_sass/colors/light-typography.scss
@@ -12,7 +12,7 @@
   --text-color: #333333;
   --blockquote-border-color: #eee;
   --blockquote-text-color: #9a9a9a;
-  --link-color: black;
+  --link-color: rgb(185, 40, 40);
   --link-underline-color: #dee2e6;
   --text-muted-color: gray;
   --tb-odd-bg: #fbfcfd;
@@ -43,11 +43,11 @@
   --post-list-text-color: dimgray;
   --btn-patinator-text-color: #555555;
   --btn-paginator-hover-color: #e9ecef;
-  --btn-active-bg: #2a408e;
-  --btn-active-border-color: black;
+  --btn-active-bg: rgb(170, 33, 33);
+  --btn-active-border-color: rgb(240, 107, 107);
   --btn-text-color: #f8f8f8;
   --btn-paginator-border-color: #f1f1f1;
-  --btn-paginator-shadow: #4b92d2;
+  --btn-paginator-shadow: #d2504b;
   --pin-bg: #f5f5f5;
   --pin-color: #999fa4;
 
